# story-lord

./: .env.example  Makefile  README.md  pyproject.toml
src/: main.py  prompt.py  utils.py
tests/: test_main.py
