[project]
name = "story-lord"
version = "1.0.0"
description = "Default template for PDM package"
authors = [{ name = "Koen van Esterik", email = "koen@vanesterik.com" }]
dependencies = [
    "openai>=1.8.0",
    "python-dotenv>=1.0.0",
    "toml>=0.10.2",
    "pydantic>=2.5.3",
]
requires-python = "==3.11.*"
readme = "README.md"
license = { text = "MIT" }


[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
strict = true
warn_unused_ignores = true


[tool.pdm.dev-dependencies]
dev = ["pytest>=7.4.4", "types-toml>=0.10.8.7", "mypy>=1.8.0"]
